Adding the more sizes option

--- a/views/addorder.ejs
+++ b/views/addorder.ejs
@@ -166,9 +166,12 @@
                                     <select class="form-select" aria-label="Default select example" name="size1" id="size1"
                                         required>
                                        
+                                            <option value="S"> S </option>
                                             <option value="M"> M </option>
                                             <option value="L"> L </option>
                                             <option value="XL"> XL</option>
+                                            <option value="XXL"> XXL</option>
+                                            <option value="XXXL"> XXXL</option>
                                            
     
                                     </select>
