--- a/views/addstock.ejs
+++ b/views/addstock.ejs
@@ -148,9 +148,12 @@
                                     <select class="form-select" aria-label="Default select example" 
                                         id="size1" required>
 
+                                            <option value="S"> S </option>
                                             <option value="M"> M </option>
                                             <option value="L"> L </option>
                                             <option value="XL"> XL</option>
+                                            <option value="XXL"> XXL</option>
+                                            <option value="XXXL"> XXXL</option>
                                     </select>
                                     <label for="floatingInput">Size</label>
                                 </div>
