--- a/views/vieworder.ejs
+++ b/views/vieworder.ejs
@@ -42,11 +42,11 @@
             </div>
         </div>
     </nav>
-    
-    
+
+
     <!-- End vertical navbar -->
-    
-    
+
+
     <!-- Page content -->
     <br> <br>
     <nav class="navbar navbar-expand-lg navbar-light bg-white custom-navbar">
@@ -68,8 +68,8 @@
                             <b> Order </b>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="orderDropdown">
-                            <li><a class="dropdown-item fs-1" href="/addorder"><b>Add Order</b></a></li>
                             <li><a class="dropdown-item fs-1" href="/vieworder"><b>View Orders</b></a></li>
+                            <li><a class="dropdown-item fs-1" href="/addorder"><b>Add Order</b></a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -77,7 +77,7 @@
                             role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <b>Stock</b>
                         </a>
-    
+
                         <ul class="dropdown-menu" aria-labelledby="stockDropdown">
                             <li><a class="dropdown-item fs-1" href="/viewstock"><b>View Stocks</b></a></li>
                             <li><a class="dropdown-item fs-1" href="/addstock"><b>Add Stock</b></a></li>
@@ -93,34 +93,35 @@
             </div>
         </div>
     </nav>
-        <!-- Page content -->
+    <!-- Page content -->
 
-        <h1><b>Order Summary</b></h1>
+    <h1><b>Order Summary</b></h1>
 
 
-        <center><img class="ui medium rounded image" src="/images/flower.svg"></center>
-        <br>
-        <br>
-        <table class="ui inverted table table-bordered" style="background: linear-gradient(to bottom, #2784ff 0%, #ff9500 100%);">
-            <thead>
-                <tr class="table-success">
-            
-                    <th>Item ID</th>
-                    <th>Customer Name</th>
-                    <th>Category</th>
-                    <th>Brand Name</th>
-                    <th>Size</th>
-                    <th>Amount</th>
-                    <th>Customer Number</th>
-                    <th>Delete Order</th>
-                </tr>
-            </thead>
-            <tbody id="allorder">
-                
-            </tbody>
-        </table>
-                
-           
+    <center><img class="ui medium rounded image" src="/images/flower.svg"></center>
+    <br>
+    <br>
+    <table class="ui inverted table table-bordered"
+        style="background: linear-gradient(to bottom, #2784ff 0%, #ff9500 100%);">
+        <thead>
+            <tr class="table-success">
+
+                <th>Item ID</th>
+                <th>Customer Name</th>
+                <th>Category</th>
+                <th>Brand Name</th>
+                <th>Size</th>
+                <th>Amount</th>
+                <th>Customer Number</th>
+                <th>Delete Order</th>
+            </tr>
+        </thead>
+        <tbody id="allorder">
+
+        </tbody>
+    </table>
+
+
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
@@ -129,7 +130,8 @@
     <!-- Semnatic-UI Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -137,34 +139,34 @@
 
 
     <script language='javascript'>
-       
+
         /* API Call when page is being loaded */
         getAllOrders();
-        function getAllOrders(){
+        function getAllOrders() {
             var ui = "";
             $.get('/getallorders', (res) => {
                 console.log(res.data);
                 if (res.statusCode === 200) {
                     console.log(res.data[0].item_id);
-                   console.log(res.data);
-                    
-                    for(var i=0;i<res.data.length;i++){
-                      ui+= "<td id="+res.data[i].item_id+">"+res.data[i].item_id+"</td>"+
-                        "<td>"+res.data[i].customer_name+"</td>"+ 
-                        "<td>"+res.data[i].category+"</td>"+
-                        "<td>"+res.data[i].brand+"</td>"+
-                        "<td>"+res.data[i].size+"</td>"+
-                        "<td>"+res.data[i].total_amount+"</td>"+
-                        "<td>"+res.data[i].phone_number+"</td>"+
-                        "<td>  <center><button type='button' id='button_"+res.data[i].item_id+"'class='ui teal submit button' onClick='deleteData(this.id)'>Delete</button> </td></tr>";
-                            
+                    console.log(res.data);
+
+                    for (var i = 0; i < res.data.length; i++) {
+                        ui += "<td id=" + res.data[i].item_id + ">" + res.data[i].item_id + "</td>" +
+                            "<td>" + res.data[i].customer_name + "</td>" +
+                            "<td>" + res.data[i].category + "</td>" +
+                            "<td>" + res.data[i].brand + "</td>" +
+                            "<td>" + res.data[i].size + "</td>" +
+                            "<td>" + res.data[i].total_amount + "</td>" +
+                            "<td>" + res.data[i].phone_number + "</td>" +
+                            "<td>  <center><button type='button' id='button_" + res.data[i].item_id + "'class='ui teal submit button' onClick='deleteData(this.id)'>Delete</button> </td></tr>";
+
                     }
                     console.log(ui);
                     document.getElementById("allorder").innerHTML = ui;
                 }
             });
         };
-        function deleteData(id){
+        function deleteData(id) {
             var dataId = id.substring(id.indexOf('_') + 1);
             var jsonDataId = {
                 "item_id": dataId
