--- a/views/addstock.ejs
+++ b/views/addstock.ejs
@@ -138,6 +138,8 @@
                                         <option value="Puma"> Puma </option>
                                         <option value="Levis"> Levis </option>
                                         <option value="Calvin Klen"> Calvin Klen </option>
+                                        <option value = "Zara"> Zara </option>
+                                        <option value = "Oysho"> Oysho </option>
                                            
                                     </select>
                                     <label for="floatingInput">Brand</label>
@@ -152,8 +154,8 @@
                                             <option value="M"> M </option>
                                             <option value="L"> L </option>
                                             <option value="XL"> XL</option>
-                                            <option value="XXL"> XXL</option>
-                                            <option value="XXXL"> XXXL</option>
+                                            <option value="2XL"> 2XL</option>
+                                            <option value="3XL"> 3XL</option>
                                     </select>
                                     <label for="floatingInput">Size</label>
                                 </div>
@@ -205,7 +207,8 @@
                 processData: false,
                 contentType: "application/json; charset=UTF-8",
                 type: 'POST',
-                success: (result) => {
+                success: (result) => 
+                {
                     alert(result.message);
                     location.reload();
                 }
@@ -226,9 +229,10 @@
         };
 
          var submit_button = document.getElementById("submit_button");
-                submit_button.onclick = function () {
-                submitForm();
-            };
+                submit_button.onclick = function ()
+                {
+                    submitForm();
+                };
      </script>
 </body>
 
