--- a/views/viewstock.ejs
+++ b/views/viewstock.ejs
@@ -1,20 +1,23 @@
-<!doctype html>
-<html lang="en">
+<!doctype html> 
+<html lang="en"> 
 
-<head>
+<head> 
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!--Custom CSS-->
     <link rel="stylesheet" href="styles.css">
+
     <!--Semantic-UI CSS-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.css">
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <title>View Stock</title>
-</head>
+    <title>View Stock</title> 
+</head> 
 
 <body>
     <!-- Navbar -->
@@ -99,7 +102,7 @@
         <br>
         <center><img class="ui medium rounded image" src="/images/stock.svg"></center>
         <br>
-            <table class="ui inverted table table-bordered"  style="background: linear-gradient(to bottom, #2784ff 0%, #ff9500 100%);">
+            <table class="ui inverted table table-bordered" style="background: linear-gradient(to bottom, #2784ff 0%, #ff9500 100%);">
                 <thead>
                     <tr>
                         <th>Item Id</th>
@@ -122,6 +125,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
         crossorigin="anonymous"></script>
+
     <!-- Semnatic-UI Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js"></script>
@@ -133,7 +137,8 @@
             var ui = "";
             $.get('/getallstockdata', (res) =>{
                 if(res.statusCode ===200){
-                   for(var i=0;i<res.data.length;i++){
+                   for(var i=0;i<res.data.length;i++)
+                   {
                     ui+="<td id=" + res.data[i].item_id +">"+res.data[i].item_id+"</td>"+
                         "<td>"+res.data[i].item_name+"</td>"+
                         "<td>"+res.data[i].brand_name+"</td>"+
@@ -146,9 +151,12 @@
 
             });
         };
-        function deleteStockData(stockDataId){
+
+        function deleteStockData(stockDataId)
+        {
             var dataId = stockDataId.substring(stockDataId.indexOf('_') + 1);
-            var jsonStockDataId = {
+            var jsonStockDataId = 
+            {
                 "item_id": dataId
             }
             $.ajax({
@@ -157,15 +165,16 @@
                 processData: false,
                 contentType: "application/json; charset=UTF-8",
                 type: 'DELETE',
-                success: (result) => {
+                success: (result) =>
+                {
                     alert(result.message);
                     location.reload();
-                }
+                } 
             });
         }
-    </script>
+    </script> 
 
-    </body>
+    </body> 
     
-    </html>
+    </html> 
 
