--- a/views/viewstock.ejs
+++ b/views/viewstock.ejs
@@ -42,11 +42,11 @@
             </div>
         </div>
     </nav>
-
-
+    
+    
     <!-- End vertical navbar -->
-
-
+    
+    
     <!-- Page content -->
     <br> <br>
     <nav class="navbar navbar-expand-lg navbar-light bg-white custom-navbar">
@@ -68,8 +68,8 @@
                             <b> Order </b>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="orderDropdown">
-                            <li><a class="dropdown-item fs-1" href="/vieworder"><b>View Orders</b></a></li>
                             <li><a class="dropdown-item fs-1" href="/addorder"><b>Add Order</b></a></li>
+                            <li><a class="dropdown-item fs-1" href="/vieworder"><b>View Orders</b></a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -77,7 +77,7 @@
                             role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <b>Stock</b>
                         </a>
-
+    
                         <ul class="dropdown-menu" aria-labelledby="stockDropdown">
                             <li><a class="dropdown-item fs-1" href="/viewstock"><b>View Stocks</b></a></li>
                             <li><a class="dropdown-item fs-1" href="/addstock"><b>Add Stock</b></a></li>
@@ -93,32 +93,31 @@
             </div>
         </div>
     </nav>
-
-    <!-- Page content -->
-    <h1><b>Stocks Summary</b></h1>
-    <br>
-    <center><img class="ui medium rounded image" src="/images/stock.svg"></center>
-    <br>
-    <table class="ui inverted table table-bordered"
-        style="background: linear-gradient(to bottom, #2784ff 0%, #ff9500 100%);">
-        <thead>
-            <tr>
-                <th>Item Id</th>
-                <th>Item Name</th>
-                <th>Brand Name</th>
-                <th>Size</th>
-                <th>Amount</th>
-                <th>Delete</th>
-            </tr>
-        </thead>
-        <tbody id="viewstock">
-
-        </tbody>
-    </table>
-
-
+    
+        <!-- Page content -->
+        <h1><b>Stocks Summary</b></h1>
+        <br>
+        <center><img class="ui medium rounded image" src="/images/stock.svg"></center>
+        <br>
+            <table class="ui inverted table table-bordered"  style="background: linear-gradient(to bottom, #2784ff 0%, #ff9500 100%);">
+                <thead>
+                    <tr>
+                        <th>Item Id</th>
+                        <th>Item Name</th>
+                        <th>Brand Name</th>
+                        <th>Size</th>
+                        <th>Amount</th>
+                        <th>Delete</th>
+                    </tr>
+                </thead>
+                <tbody id="viewstock">
+                    
+                </tbody>
+            </table>
+           
+    
     </div>
-
+    
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
@@ -130,24 +129,24 @@
     <script>
         /* API Function to be called when page is being loaded */
         getAllStockData();
-        function getAllStockData() {
+        function getAllStockData(){
             var ui = "";
-            $.get('/getallstockdata', (res) => {
-                if (res.statusCode === 200) {
-                    for (var i = 0; i < res.data.length; i++) {
-                        ui += "<td id=" + res.data[i].item_id + ">" + res.data[i].item_id + "</td>" +
-                            "<td>" + res.data[i].item_name + "</td>" +
-                            "<td>" + res.data[i].brand_name + "</td>" +
-                            "<td>" + res.data[i].size + "</td>" +
-                            "<td>" + res.data[i].total_amount + "</td>" +
-                            "<td>  <center><button type='button' id='button_" + res.data[i].item_id + "'class='ui teal submit button' onClick='deleteStockData(this.id)'>Delete</button> </td></tr>";
-                    }
-                    document.getElementById('viewstock').innerHTML = ui;
+            $.get('/getallstockdata', (res) =>{
+                if(res.statusCode ===200){
+                   for(var i=0;i<res.data.length;i++){
+                    ui+="<td id=" + res.data[i].item_id +">"+res.data[i].item_id+"</td>"+
+                        "<td>"+res.data[i].item_name+"</td>"+
+                        "<td>"+res.data[i].brand_name+"</td>"+
+                        "<td>"+res.data[i].size+"</td>"+
+                        "<td>"+res.data[i].total_amount+"</td>"+
+                       "<td>  <center><button type='button' id='button_"+res.data[i].item_id+"'class='ui teal submit button' onClick='deleteStockData(this.id)'>Delete</button> </td></tr>";
+                   }
+                   document.getElementById('viewstock').innerHTML = ui;
                 }
 
             });
         };
-        function deleteStockData(stockDataId) {
+        function deleteStockData(stockDataId){
             var dataId = stockDataId.substring(stockDataId.indexOf('_') + 1);
             var jsonStockDataId = {
                 "item_id": dataId
@@ -166,6 +165,7 @@
         }
     </script>
 
-</body>
+    </body>
+    
+    </html>
 
-</html>
